EXPERIMENTAL: tweaks and attempts to set module directives (with/without using gradle module plugin)